[package]
name = "primenet-rs"
version = "0.1.0"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["color", "suggestions"] }
reqwest = { version = "0.10.4", features = ["blocking"] }