[package]
name = "primenet-rs"
version = "0.1.0"
authors = ["Aurorans Solis <primalucegd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["color", "suggestions"] }
regex = "1.3.6"
reqwest = { version = "0.10.4", features = ["blocking", "cookies"] }